# ml-framework-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: generate_index.py  retrieve_api_ref.py
mappings/: keras3.json  mlx.json
ml_frameworks_bot/: llm_wrapper.py  metrics.py  op_extraction.py  prompts.py  schema.py  translation_agent.py  utils.py
ml_frameworks_bot/keras/: __init__.py  docs_agent.py  eval.py  heuristic_retriever.py  mapping.py  metrics.py  neural_retriever.py  retriever.py
ml_frameworks_bot/keras_io/: __init__.py  docs_agent.py  loader.py  retriever.py  schema.py
ml_frameworks_bot/pytorch/: retriever.py
ml_frameworks_bot/retrieval/: __init__.py  codet5_retriever.py  common.py  heuristic_retriever.py  neural_retriever.py  sentence_transformers_retriever.py
ml_frameworks_bot/translation/: agent.py
tests/: conftest.py
tests/integration/: test_op_extraction.py  test_translation_agent.py
tests/integration/keras/: test_docs_agent.py
tests/keras/: test_keras.py  test_retriever.py
tests/unit/: test_translation_agent.py
tests/unit/keras/: test_heuristic_retriever.py  test_neural_retriever.py
tests/unit/retrieval/: test_heuristic_retriever.py  test_neural_retriever.py
