[project]
name = "ml-framework-bot"
version = "0.0.1"
description = "An agentic workflow to translate machine learning codebases across ML frameworks reliably at scale."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.8.0",
    "instructor>=1.4.1",
    "isort>=5.13.2",
    "litellm>=1.44.28",
    "llama-index>=0.11.8",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-embeddings-openai>=0.2.4",
    "llama-index-postprocessor-flag-embedding-reranker>=0.2.0",
    "openai>=1.44.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.5",
    "uv>=0.4.10",
    "weave>=0.51.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
