[project]
name = "ml-framework-bot"
version = "0.0.1"
description = "An agentic workflow to translate machine learning codebases across ML frameworks reliably at scale."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34.2",
    "instructor>=1.4.1",
    "llama-index>=0.11.8",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-embeddings-openai>=0.2.4",
    "openai>=1.44.1",
    "python-dotenv>=1.0.1",
    "weave>=0.51.5",
]

[tool.ruff.lint]
select = ["E", "F", "I001", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9", "pytest>=8.3.3"
]
