[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml-frameworks-bot"
version = "0.0.1"
description = "An agentic workflow to translate machine learning codebases across ML frameworks reliably at scale."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34.2",
    "instructor>=1.4.1",
    "litellm>=1.53.1",
    "openai>=1.44.1",
    "python-dotenv>=1.0.1",
    "weave>=0.51.17",
    "sentence-transformers>=3.1.1",
]

[tool.flit.module]
name = "ml_frameworks_bot"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9", "pytest>=8.3.3"
]
